--- a/wk2.html
+++ b/wk2.html
@@ -229,8 +229,8 @@ $(document).ready(function () {
 <h3>Opdracht</h3>
 <p>Voor deze week lever je volgende in:</p>
 </div>
-<div id="lesdocumenten" class="section level3">
-<h3>Lesdocumenten</h3>
+<div id="documentatie" class="section level3">
+<h3>Documentatie</h3>
 <div id="qualitative-vs-quantitative-research" class="section level4">
 <h4>Qualitative vs quantitative research</h4>
 <div id="video-1" class="section level5">
