--- a/wk4.html
+++ b/wk4.html
@@ -229,8 +229,8 @@ $(document).ready(function () {
 <h3>Opdracht</h3>
 <p>Voor deze week lever je volgende in.</p>
 </div>
-<div id="lesdocumenten" class="section level3">
-<h3>Lesdocumenten</h3>
+<div id="documentatie" class="section level3">
+<h3>Documentatie</h3>
 <p>Reliability vs Validity</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/KuT2n1w0Ixc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
