--- a/wk1.html
+++ b/wk1.html
@@ -231,20 +231,17 @@ $(document).ready(function () {
 <p>Ieder lid van elk team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later ter inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.</p>
 <p>Het notebook moet bestaan uit een online document (website, blog, etc. of <a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/explore-a-topic-with-research-and-collaboration/choose-a-research-topic.html" target="_blank">dit</a>) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de <a href="https://hanbedrijfskunde.github.io/bon/index.html" target="_blank">startpagina</a>.</p>
 </div>
-<div id="lesdocumenten" class="section level3">
-<h3>Lesdocumenten</h3>
+<div id="documentatie" class="section level3">
+<h3>Documentatie</h3>
 <ul>
 <li><a href="https://witusj.github.io/b-cluster/presentation/index.html" target="_blank">Startpresentatie</a></li>
 <li>Dina Ribbink, Allard C.R. van Riel, Veronica Liljander, Sandra Streukens, (2004) “Comfort your online customer: quality, trust and loyalty on the internet”, Managing Service Quality: An International Journal, Vol. 14 Issue: 6, pp.446-456, <a href="https://doi.org/10.1108/09604520410569784" class="uri">https://doi.org/10.1108/09604520410569784</a></li>
 <li><a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/overview.html" target="_blank">Tutorial</a> online onderzoeksrapportage (Google)</li>
 </ul>
 <hr>
-<div id="videomateriaal" class="section level5">
-<h5>Videomateriaal</h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3vyheXBPSsg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
 <p><br> <iframe width="560" height="315" src="https://www.youtube.com/embed/RZcfmA1l6cE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
-</div>
 </div>
 
 
