--- a/wk5.html
+++ b/wk5.html
@@ -229,8 +229,8 @@ $(document).ready(function () {
 <h3>Opdracht</h3>
 <p>Voor deze week lever je volgende in.</p>
 </div>
-<div id="lesdocumenten" class="section level3">
-<h3>Lesdocumenten</h3>
+<div id="documentatie" class="section level3">
+<h3>Documentatie</h3>
 <p>Typen onderzoeksvragen en eisen onderzoeksvragen en antwoord categorieën</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/i-5U9F-KzBY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
