--- a/wk1.html
+++ b/wk1.html
@@ -239,9 +239,13 @@ $(document).ready(function () {
 <li><a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/overview.html" target="_blank">Tutorial</a> online onderzoeksrapportage (Google)</li>
 </ul>
 <hr>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3vyheXBPSsg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-</iframe>
-<p><br> <iframe width="560" height="315" src="https://www.youtube.com/embed/RZcfmA1l6cE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+<div class="resp-container">
+<p><iframe class="resp-iframe" src="https://www.youtube.com/embed/3vyheXBPSsg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+<br>
+<div class="resp-container">
+<p><iframe class="resp-iframe" src="https://www.youtube.com/embed/RZcfmA1l6cE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
 </div>
 
 
