--- a/wk1.html
+++ b/wk1.html
@@ -225,6 +225,10 @@ $(document).ready(function () {
 </div>
 
 
+<div id="voorbereiding" class="section level3">
+<h3>Voorbereiding</h3>
+<p>Voor het werkcollege heb je de beschrijving van de module bestudeerd (zie <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>).</p>
+</div>
 <div id="opdracht" class="section level3">
 <h3>Opdracht</h3>
 <p>Het thema voor dit semester is <strong>e-commerce</strong>. Dit wetenschappelijke <a href="https://repository.ubn.ru.nl//bitstream/handle/2066/138684/138684.pdf?sequence=1" target="_blank">artikel</a> bespreekt de relatie tussen e-trust en klantloyaliteit en zal tijdens het eerste werkcollege worden besproken.</p>
