--- a/wk3.html
+++ b/wk3.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
 Dit stadium in het proces vereist daarom de hoogste mate van aandacht en concentratie. Tijdens het werkcollege werk je met je team een aantal passende enquêtevragen uit. Alle vragen worden samengevoegd en wederom wordt met de groep bepaald met welke vragen een zo volledig en duidelijk mogelijk antwoord wordt verkregen op de onderzoeksvraag.
 <hr>
 <div class="resp-container">
-<iframe class="resp-iframe-slide" allowfullscreen="true" frameborder="0" mozallowfullscreen="true" src="https://docs.google.com/presentation/d/e/2PACX-1vQBzc8uAJgimoVFKxKkDkYw2xoeMwXCv7_52r1LWSC1K_2yWTsaDgFRJ5Ma6-3M9TAyMks2qtusCRvi/embed?start=false&amp;loop=false&amp;delayms=3000" webkitallowfullscreen="true">
+<iframe class="resp-iframe" allowfullscreen="true" frameborder="0" mozallowfullscreen="true" src="https://docs.google.com/presentation/d/e/2PACX-1vQBzc8uAJgimoVFKxKkDkYw2xoeMwXCv7_52r1LWSC1K_2yWTsaDgFRJ5Ma6-3M9TAyMks2qtusCRvi/embed?start=false&amp;loop=false&amp;delayms=3000" webkitallowfullscreen="true">
 </iframe>
 </div>
 <hr>
