--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@ $(document).ready(function () {
 
 <p>Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde. Hier plaatsen we materiaal dat specifiek gericht is aan studenten HAN Bedrijfskunde die in dit semester deze module volgen.</p>
 <p>Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>.</p>
+<p>Teams houden hun voortgang bij in online notebooks. Volg onderstaande links voor de afzonderlijke documenten:</p>
+<ul>
+<li><a href="https://docs.google.com/document/d/1pTcvDSJAVtoy4snHTP8vBLb3CrjbDvT_v_fM-LUwvr0/edit?usp=sharing" target="_blank">Team 1</a></li>
+<li><a href="https://docs.google.com/document/d/1Rpt9xdrpAVxcAd59vPQzF0HsjicEjNPtHcRdVdLQvd4/edit?usp=sharing" target="_blank">Team 2</a></li>
+<li><a href="https://docs.google.com/document/d/1rCMsqTLtAjvXX-TXwLn1n3szb1ziZqdod66x_IW4flA/edit?usp=sharing" target="_blank">Team 3</a></li>
+<li><a href="https://docs.google.com/document/d/1-ujFM2Arte_yDAHCbI-CFqK-8K4xYbTB8o_m8XFEvjA/edit?usp=sharing" target="_blank">Team 4</a></li>
+<li><a href="https://docs.google.com/document/d/11kXlcm96TbyrO3q1ZbfMDc_CPjYerp5uKh6mrQTJ3Hg/edit?usp=sharing" target="_blank">Team 5</a></li>
+<li><a href="https://docs.google.com/document/d/1WLPIYlp8kcEYYD9jyTH6589BFVSI2XL3qXFpqMv9YbQ/edit?usp=sharing" target="_blank">Team 6</a></li>
+<li><a href="https://docs.google.com/document/d/1KIi7iYRcxyAjf9z9BAjcpdISKD82VasS3B0aE_u91Zo/edit?usp=sharing" target="_blank">Team 7</a></li>
+<li><a href="https://docs.google.com/document/d/1UNtcU7artnmqoAlBHtA48Iy4Y-0uhMqymzRWxRv1p74/edit?usp=sharing" target="_blank">Team 8</a></li>
+<li><a href="https://docs.google.com/document/d/1_1Z5xKQIuitrefLxVVn4TixSywF3l_0XNR8iON33jrE/edit?usp=sharing" target="_blank">Team 9</a></li>
+<li><a href="https://docs.google.com/document/d/1d3DX9M16VMALh8qPZ66Vm5nvQpvFN4vdkCL3HwaR6vc/edit?usp=sharing" target="_blank">Team 10</a></li>
+</ul>
 
 
 
