--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ $(document).ready(function () {
 
 
 <p>Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde. Hier plaatsen we materiaal dat specifiek gericht is aan studenten HAN Bedrijfskunde die in dit semester deze module volgen.</p>
-<p>Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>.</p>
+<p>Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>. Mocht je vragen hebben waarvoor je de antwoorden niet online hebt gevonden, dan kun je mailen naar: <a href="mailto:witek.tenhove@han.nl?Subject=B-cluster%20onderzoek%20" target="_top">Witek ten Hove</a> of <a href="mailto:david.hartsuiker@han.nl?Subject=B-cluster%20onderzoek%20" target="_top">David Hartsuiker</a></p>
 <p>Teams houden hun voortgang bij in online notebooks. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="https://drive.google.com/open?id=1pTcvDSJAVtoy4snHTP8vBLb3CrjbDvT_v_fM-LUwvr0" target="_blank">Team 1</a></li>
