--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ $(document).ready(function () {
 <p>Teams houden hun voortgang bij in online notebooks. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="https://drive.google.com/open?id=1pTcvDSJAVtoy4snHTP8vBLb3CrjbDvT_v_fM-LUwvr0" target="_blank">Team 1</a></li>
-<li><a href="https://drive.google.com/open?id=1Rpt9xdrpAVxcAd59vPQzF0HsjicEjNPtHcRdVdLQvd4" target="_blank">Team 2</a></li>
+<li><a href="https://1drv.ms/f/s!AoKF5PaYIkEt4R94GfuDleC_Kugp" target="_blank">Team 2</a></li>
 <li><a href="https://tdeklein7.wixsite.com/website" target="_blank">Team 3</a></li>
 <li><a href="https://drive.google.com/open?id=1-ujFM2Arte_yDAHCbI-CFqK-8K4xYbTB8o_m8XFEvjA" target="_blank">Team 4</a></li>
 <li><a href="https://drive.google.com/open?id=11kXlcm96TbyrO3q1ZbfMDc_CPjYerp5uKh6mrQTJ3Hg" target="_blank">Team 5</a></li>
