--- a/wk2.html
+++ b/wk2.html
@@ -257,6 +257,10 @@ $(document).ready(function () {
 <h3>Documentatie</h3>
 <hr>
 <div class="resp-container">
+<p><iframe class="resp-iframe" src="https://docs.google.com/presentation/d/e/2PACX-1vQw_NoRUSAAWCmgvZ9-G4SMElzbxXs9Mp6xdiYxnkNjwAmjyvErzVPruU0JL5d2AaXDlL3t03BwX8a3/embed?start=false&loop=false&delayms=3000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+<hr>
+<div class="resp-container">
 <p><iframe class="resp-iframe" src="https://www.youtube.com/embed/QauomrFcrXk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
 </div>
 </div>
