--- a/wk3.html
+++ b/wk3.html
@@ -257,6 +257,13 @@ Dit stadium in het proces vereist daarom de hoogste mate van aandacht en concent
 </div>
 <div id="documentatie" class="section level3">
 <h3>Documentatie</h3>
+<ul>
+<li>Madacsi, H. (januari, 2018). De invloed van demografische factoren op de relatie tussen de tevredenheid over orderprocessen, gepercipieerde waarde en herhaalaankoop intentie in een online omgeving. Geraadpleegd op 13 september 2018, van <a href="http://dspace.ou.nl/bitstream/1820/9536/1/Madacsi%20H%20MM9906%20AF%20scriptie.pdf">http://dspace.ou.nl/bitstream/1820/9536/1/Madacsi%20H%20MM9906%20AF%20scriptie.pdf</a></li>
+</ul>
+<hr>
+<div class="resp-container">
+<p><iframe class="resp-iframe" src="https://docs.google.com/presentation/d/e/2PACX-1vQyCn8P63KQRzq_BHRqw_kEyg8c4Qr5JmxFWLuq_4gFwPj5thky6NSwHaTUms0c0Tm8jW2tM9fiA1h3/embed?start=false&loop=false&delayms=3000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
 <hr>
 <div class="resp-container">
 <iframe class="resp-iframe" src="https://www.youtube.com/embed/i-5U9F-KzBY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
