--- a/wk5.html
+++ b/wk5.html
@@ -225,7 +225,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>Under construction</p>
+<p>Deze week gaan we eerste stappen zetten met data analyse. Ter illustratie gebruiken we data die we zelf verzamelen via onderstaande formulier:</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdukuZO6ocXD2RF-dSoV-4F1fDXBOAqe3avTp0LV4ECbbX5eg/viewform?embedded=true" width="640" height="1290" frameborder="0" marginheight="0" marginwidth="0">
+Loading…
+</iframe>
+<p>De verzamelde data gaan we daarna bekijken en bewerken in <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH">RStudio</a>.</p>
 
 
 
