--- a/wk6.html
+++ b/wk6.html
@@ -225,7 +225,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Under construction</p>
+<p>Koppeling naar <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">RStudio</a></p>
 
 
 
