--- a/afronding.html
+++ b/afronding.html
@@ -225,14 +225,12 @@ $(document).ready(function () {
 </div>
 
 
-<div id="opdracht" class="section level3">
-<h3>Opdracht</h3>
-<p>Voor deze week lever je volgende in.</p>
+<div id="succes-met-het-tentamen" class="section level2">
+<h2>Succes met het tentamen!</h2>
+<div class="figure">
+<img src="exam.jpg" alt="examen" />
+<p class="caption">examen</p>
 </div>
-<div id="documentatie" class="section level3">
-<h3>Documentatie</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/k3FgK0KfhuU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-</iframe>
 </div>
 
 
