--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ $(document).ready(function () {
   <a href="wk7.html">Week 7</a>
 </li>
 <li>
-  <a href="afronding.html">Afronding</a>
+  <a href="tw-per.html">Tweede periode</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
