--- a/tw-per.html
+++ b/tw-per.html
@@ -11,7 +11,7 @@
 
 
 
-<title>README.utf8.md</title>
+<title>Activiteiten</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -220,12 +220,20 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Activiteiten</h1>
 
 </div>
 
 
-<div id="bon" class="section level1">
-<h1>bon</h1>
+<div id="week-1---beschrijvende-statistiek" class="section level2">
+<h2>Week 1 - Beschrijvende statistiek</h2>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/CRISP-DM_Process_Diagram.png/1200px-CRISP-DM_Process_Diagram.png" alt="Smiley face" height="300" width="300"></p>
+Ga naar <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">RStudio Cloud</a> en open het project “Statistiek1”
+<hr>
+</div>
+<div id="week-2---inferentiele-statistiek" class="section level2">
+<h2>Week 2 - Inferentiele statistiek</h2>
+<p><img src="https://qph.fs.quoracdn.net/main-qimg-7d231419268ac9dd87e2f352ce1811c8" /></p>
 </div>
 
 
