--- a/tw-per.html
+++ b/tw-per.html
@@ -228,12 +228,20 @@ $(document).ready(function () {
 <div id="week-1---beschrijvende-statistiek" class="section level2">
 <h2>Week 1 - Beschrijvende statistiek</h2>
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/CRISP-DM_Process_Diagram.png/1200px-CRISP-DM_Process_Diagram.png" alt="Smiley face" height="300" width="300"></p>
-Ga naar <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">RStudio Cloud</a> en open het project “Statistiek1”
+<p>Ga naar <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">RStudio Cloud</a> en open het project “Statistiek1”</p>
 <hr>
 </div>
 <div id="week-2---inferentiele-statistiek" class="section level2">
 <h2>Week 2 - Inferentiele statistiek</h2>
 <p><img src="https://qph.fs.quoracdn.net/main-qimg-7d231419268ac9dd87e2f352ce1811c8" /></p>
+<hr>
+</div>
+<div id="afronding" class="section level2">
+<h2>Afronding</h2>
+<div id="beoordelingsformulieren" class="section level3">
+<h3>Beoordelingsformulieren</h3>
+<p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR9cp1EjJhVwFBbQ5iByu1U8huLncmWaSjA0w6_hMPlsh77c9-lVickrrHaMP0vhFo6sfUUQyGtBQOQ/pub?output=xlsx" target="_blank">Excel</a> of <a href="https://docs.google.com/spreadsheets/d/16jYF0JwikI15AkybpMfSDDXsU8VBmXfoadWMHAvHYsY/copy?" target="_blank">Google</a></p>
+</div>
 </div>
 
 
