Updated inferential stats

--- a/tw-per.html
+++ b/tw-per.html
@@ -234,6 +234,9 @@ $(document).ready(function () {
 <div id="week-2---inferentiele-statistiek" class="section level2">
 <h2>Week 2 - Inferentiele statistiek</h2>
 <p><img src="https://qph.fs.quoracdn.net/main-qimg-7d231419268ac9dd87e2f352ce1811c8" /></p>
+<p><a href="https://docs.google.com/spreadsheets/d/1Op6i3TbZBGjeeJ2f0ZHENLkXfPPX287a7-o0pCB6P9Q/copy">Voorbeeld regressie</a></p>
+<p><a href="https://docs.google.com/spreadsheets/d/1kmfhaS3CtqzUMZS7LVgr6RNmhbRHWumsdNDRtaK0xtw/copy">Voorbeeld chi-kwadraat</a></p>
+<p><a href="https://docs.google.com/spreadsheets/d/19ctncFxVRmyP0MPnIasKcGdf8xtg8ZzMvtpUTfEzW4c/copy">Voorbeeld ANOVA</a></p>
 <hr>
 </div>
 <div id="afronding" class="section level2">
