--- a/wk1.html
+++ b/wk1.html
@@ -329,7 +329,7 @@ $(document).ready(function () {
 </div>
 <div id="opdracht" class="section level3">
 <h3>Opdracht</h3>
-<p>Het thema voor dit semester is <strong>e-commerce</strong>. Dit wetenschappelijke <a href="https://repository.ubn.ru.nl//bitstream/handle/2066/138684/138684.pdf?sequence=1" target="_blank">artikel</a> bespreekt de relatie tussen e-trust en klantloyaliteit en zal tijdens het eerste werkcollege worden besproken.</p>
+<p>Het thema voor dit semester is <strong>online vertrouwen</strong>. Dit wetenschappelijke <a href="https://drive.google.com/open?id=1De98mxGp_90TA2JH0zWqnSrPm1lnFS8x" target="_blank">artikel</a> bespreekt de factoren die vertrouwen verhogen of juist verlagen bij online bezoekers van een website.</p>
 <p>Ieder lid van elk team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later ter inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.</p>
 <p>Het notebook moet bestaan uit een online document (website, blog, etc. of <a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/explore-a-topic-with-research-and-collaboration/choose-a-research-topic.html" target="_blank">dit</a>) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de <a href="https://hanbedrijfskunde.github.io/bon/index.html">startpagina</a>.</p>
 </div>
