--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ $(document).ready(function () {
 <h2>Teams</h2>
 <div id="bka-b03" class="section level3">
 <h3>BKA-B03</h3>
+<p><img src="bkab03.png" width=140px></p>
 <p>Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="" target="_blank">Team 1</a></li>
@@ -348,6 +349,7 @@ $(document).ready(function () {
 </div>
 <div id="bkn-b07" class="section level3">
 <h3>BKN-B07</h3>
+<p><img src="bknb07.png" width=140px></p>
 <p>Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="" target="_blank">Team 1</a></li>
