--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ $(document).ready(function () {
 <div id="bka-b03" class="section level3">
 <h3>BKA-B03</h3>
 <p><img src="bkab03.png" width=140px></p>
-<p>Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:</p>
+<p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="" target="_blank">Team 1</a></li>
 <li><a href="" target="_blank">Team 2</a></li>
@@ -351,13 +351,47 @@ $(document).ready(function () {
 <div id="bkn-b07" class="section level3">
 <h3>BKN-B07</h3>
 <p><img src="bknb07.png" width=140px></p>
-<p>Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:</p>
+<p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="" target="_blank">Team 1</a></li>
 <li><a href="" target="_blank">Team 2</a></li>
 <li><a href="" target="_blank">Team 3</a></li>
 <li><a href="" target="_blank">Team 4</a></li>
 <li><a href="" target="_blank">Team 5</a></li>
+<li><a href="" target="_blank">Team 6</a></li>
+<li><a href="" target="_blank">Team 7</a></li>
+<li><a href="" target="_blank">Team 8</a></li>
+<li><a href="" target="_blank">Team 9</a></li>
+<li><a href="" target="_blank">Team 10</a></li>
+</ul>
+</div>
+<div id="lma-b01" class="section level3">
+<h3>LMA-B01</h3>
+<p><img src="lmab01.png" width=140px></p>
+<p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
+<ul>
+<li><a href="https://docs.google.com/document/d/10PUY4awe97yO6s4NEMfqIcjD_h5q_QxMZRAQLf7M0Z0/edit" target="_blank">Team 1</a></li>
+<li><a href="https://docs.google.com/document/d/1ENVc82aNopEMhDnFMjGS5RAOoOQND1iXdpDx3Q2KXJI/edit" target="_blank">Team 2</a></li>
+<li><a href="https://docs.google.com/document/d/1w8DvigfVpDxMLIPuNss9QnjbCJ_rjqlvkvlrhznGKUU/edit" target="_blank">Team 3</a></li>
+<li><a href="https://docs.google.com/document/d/1GENH__7wyxnnder-75wbmdzOkwGr4zW6KbmG26Zpp6k/edit" target="_blank">Team 4</a></li>
+<li><a href="https://docs.google.com/document/d/1UgfGYsN9i5SktFsjl0VMy2yARfHTB9LJplZQiy58hto/edit" target="_blank">Team 5</a></li>
+<li><a href="" target="_blank">Team 6</a></li>
+<li><a href="" target="_blank">Team 7</a></li>
+<li><a href="" target="_blank">Team 8</a></li>
+<li><a href="" target="_blank">Team 9</a></li>
+<li><a href="" target="_blank">Team 10</a></li>
+</ul>
+</div>
+<div id="lma-b02" class="section level3">
+<h3>LMA-B02</h3>
+<p><img src="lmab02.png" width=140px></p>
+<p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
+<ul>
+<li><a href="https://docs.google.com/document/d/1CWhdFefPOMxk-HyhbkTLbwJa3EsLM8l9P-KThzSX0Ig/edit#heading=h.37k9i2larym8" target="_blank">Team 1</a></li>
+<li><a href="https://docs.google.com/document/d/1GKC4ZCZ3qZE5YkBy1zZLrT63cxFIt-cj-3gZLUfH5xQ/edit" target="_blank">Team 2</a></li>
+<li><a href="https://docs.google.com/document/d/1GYYmSd-txfRiF06xFITTGWlrQ13WWoF3OAzDzpzjCu0/edit#heading=h.g657mr24mt0w" target="_blank">Team 3</a></li>
+<li><a href="https://docs.google.com/document/d/1reNzdhxc1ekXkWpR7wUAO6cSBQc-6v4fNeSrnEPqxUU/edit#heading=h.4no0ops4xi49" target="_blank">Team 4</a></li>
+<li><a href="https://docs.google.com/document/d/1Pt5wessAA-BzPhsR_YiYoeaive-18M_RE0gJcMDlMU4/edit#heading=h.c3o8ol3zior" target="_blank">Team 5</a></li>
 <li><a href="" target="_blank">Team 6</a></li>
 <li><a href="" target="_blank">Team 7</a></li>
 <li><a href="" target="_blank">Team 8</a></li>
