--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@ $(document).ready(function () {
 <p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="" target="_blank">Team 1</a></li>
-<li><a href="" target="_blank">Team 2</a></li>
+<li><a href="https://docs.google.com/document/d/17fcoX-J-iIt9GbnWXdFotfVjkdG-mxWv77M2UCfcNUQ/edit" target="_blank">Team 2</a></li>
 <li><a href="" target="_blank">Team 3</a></li>
-<li><a href="" target="_blank">Team 4</a></li>
+<li><a href="https://drive.google.com/open?id=1qxyU974b0XDgl4S0FOHR7LdqKfxAM3NgT2OUl-wYP-8 " target="_blank">Team 4</a></li>
 <li><a href="http://mvoost.simplesite.com/" target="_blank">Team 5</a></li>
 <li><a href="" target="_blank">Team 6</a></li>
 <li><a href="" target="_blank">Team 7</a></li>
