--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ $(document).ready(function () {
 <p><img src="bknb07.png" width=140px></p>
 <p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
-<li><a href="" target="_blank">Team 1</a></li>
+<li><a href="https://docs.google.com/document/d/1vcKTyRyMrZzd83eQrEK__XTjaemAku8lNZtz16nipO8/edit?usp=sharing" target="_blank">Team 1</a></li>
 <li><a href="" target="_blank">Team 2</a></li>
 <li><a href="https://drive.google.com/open?id=1c2QoKzQXb6XNEMSBBAe_9qsMZ6coN-XK" target="_blank">Team 3</a></li>
 <li><a href="https://drive.google.com/drive/folders/1Eod1eee7GjCy95LUKr5nkUU5qLJ57BOc?usp=sharing" target="_blank">Team 4</a></li>
