Added form to week 5

--- a/wk5.html
+++ b/wk5.html
@@ -324,10 +324,23 @@ $(document).ready(function () {
 
 
 <p>Deze week gaan we eerste stappen zetten met data analyse. Ter illustratie gebruiken we data die we zelf verzamelen via onderstaande formulier:</p>
+<div id="groepen" class="section level2 tabset">
+<h2>Groepen</h2>
+<div id="bedrijfskunde" class="section level3">
+<h3>Bedrijfskunde</h3>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdukuZO6ocXD2RF-dSoV-4F1fDXBOAqe3avTp0LV4ECbbX5eg/viewform?embedded=true" width="640" height="1290" frameborder="0" marginheight="0" marginwidth="0">
 Loading…
 </iframe>
 <p>De verzamelde data gaan we daarna bekijken en bewerken in <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH">RStudio</a>.</p>
+</div>
+<div id="logistics-management" class="section level3">
+<h3>Logistics Management</h3>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4j6kgxjbyO1ZwFNG4se9c_xhWtg0dia608rQQ3SH00CQ1fQ/viewform?embedded=true" width="640" height="1369" frameborder="0" marginheight="0" marginwidth="0">
+Loading…
+</iframe>
+<p>De resultaten kun je hier <a href="https://docs.google.com/spreadsheets/d/1W5Ex4ArMl5Jqn2Qxv1XwaB7u18zSoHIFaHUeVsIya0E/edit?usp=sharing" target="_blank">inzien</a>.</p>
+</div>
+</div>
 
 
 
