--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@ $(document).ready(function () {
 <p>Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:</p>
 <ul>
 <li><a href="https://docs.google.com/document/d/1vcKTyRyMrZzd83eQrEK__XTjaemAku8lNZtz16nipO8/edit?usp=sharing" target="_blank">Team 1</a></li>
-<li><a href="" target="_blank">Team 2</a></li>
+<li><a href="https://docs.google.com/document/d/1b2DzDmjjKlrTgbClMIkMkan8TKygbVwOxYrnmayr0tE/edit?ts=5c6d14cf" target="_blank">Team 2</a></li>
 <li><a href="https://drive.google.com/open?id=1c2QoKzQXb6XNEMSBBAe_9qsMZ6coN-XK" target="_blank">Team 3</a></li>
-<li><a href="https://drive.google.com/drive/folders/1Eod1eee7GjCy95LUKr5nkUU5qLJ57BOc?usp=sharing" target="_blank">Team 4</a></li>
+<li><a href="https://docs.google.com/document/d/19mZs59GpB-L8TzW2lBU50Chx3wXGicTctbsmyRpLwms/edit?invite=CNOojJ0M&ts=5c6d16d4" target="_blank">Team 4</a></li>
 <li><a href="https://docs.google.com/document/d/1FbIfO9_9UhakDYspqbkwC24See5qj39PFUKV0Ncg-dQ/edit?usp=sharing" target="_blank">Team 5</a></li>
 <li><a href="" target="_blank">Team 6</a></li>
 <li><a href="" target="_blank">Team 7</a></li>
