--- a/wk3.html
+++ b/wk3.html
@@ -353,6 +353,10 @@ Dit stadium in het proces vereist daarom de hoogste mate van aandacht en concent
 <li>TIP: gebruik de wetenschappelijke artikelen als inspiratie voor bovenstaande</li>
 </ul>
 </div>
+<div id="notities" class="section level3">
+<h3>Notities</h3>
+<p><a href="https://docs.google.com/presentation/d/e/2PACX-1vQzlWI0JdY1FUYDOaCy_ra2b55cX3CoCrSf6pSfMcAydz6szTAk33xW5lVBFruO-0e3Wjz1HrbIc6F7/pub?start=false&loop=false&delayms=3000" target="_blank">Link </a>naar slides Witek</p>
+</div>
 <div id="documentatie" class="section level3">
 <h3>Documentatie</h3>
 <ul>
