--- a/wk4.html
+++ b/wk4.html
@@ -338,7 +338,7 @@ $(document).ready(function () {
 <div id="documentatie" class="section level3">
 <h3>Documentatie</h3>
 <div class="resp-container">
-<iframe class="resp-iframe" allowfullscreen="true" frameborder="0" mozallowfullscreen="true" src="https://docs.google.com/presentation/d/e/2PACX-1vRrRKgmtlDRYb6eqs1lH5cL81Ug0WUjfTK-LkE4IM47GCF3D_K4cnawEUj8V1GZmF0MpTBOHtZrDq_h/embed?start=false&amp;loop=false&amp;delayms=3000" webkitallowfullscreen="true">
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ0JfGXyVXHm5svcPi1pz5NtX0WLrp9AwG_HJSgOaPy4zwe7j38zt2dJbK64PJVln6hpQhXigGnA_wL/embed?start=true&amp;loop=true&amp;delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
 </iframe>
 </div>
 <hr>
