--- a/wk4.html
+++ b/wk4.html
@@ -337,7 +337,7 @@ $(document).ready(function () {
 </div>
 <div id="documentatie" class="section level3">
 <h3>Documentatie</h3>
-<div class="resp-container">
+<div>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ0JfGXyVXHm5svcPi1pz5NtX0WLrp9AwG_HJSgOaPy4zwe7j38zt2dJbK64PJVln6hpQhXigGnA_wL/embed?start=true&amp;loop=true&amp;delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
 </iframe>
 </div>
